# pyrus

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: python-package.yml
docs/: CHANGELOG.md  changelog.html  contributions.html  documentation.html  license.html  readme.html
docs/css/: style.css
docs/pages-files/: contact.html  index.html  readme.html  terms.html
docs/user_docs/usage/: usage.md
experimental/: data.py  scrape.ipynb
experimental/existingmods/: exp_data.py
experimental/newmods/: database.py
experimental/notebooks/: nb_file.ipynb
pyrus.egg-info/: PKG-INFO  entry_points.txt
src/: __init__.py  config.py  utils.py
src/pyrus/: __init__.py  backoff.py  cache.py  config.py  data.py  data_validator.py  file.py  file_manager.py  language_library.py  librarian.py  pyrus.ipynb  pyrus_exceptions.py  quick.py  str_manager.py  test.ipynb  test.py  utils.py  web.py
src/pyrus.egg-info/: PKG-INFO  SOURCES.txt
src/pyrus/ignored/: data.py
src/pyrus/models/: __init__.py  html-classification.py  unsupervised-continuous-learning.py
src/pyrus/tests/: test_str_manager.py
src/scripts/: backoff.py  cache.py  file.py
src/tests/: test_str_manager.py
testdata/datatables/csv/: pyrus_test_dt_name_age_city_state.csv
testdata/datatables/xls/: pyrus_test_dt_name_age_city_state.xls
testdata/datatables/xlsx/: pyrus_test_dt_name_age_city_state.xlsx
tests/: __init__.py  test_backoff.py  test_cache.py  test_data.py  test_file.py
